   - myICollector: cleanup the stores at end.
   - OpeTemplateProperties: account tooltip is account label (todo #1105).
   - OpeTemplateProperties: review account column width (todo #1108).
   - TVAForm: label is now mandatory.
   - TVAStyle: style the VAT declarations.
   - Review (re-check+setup) all integrity constraints. 
 
 Bug fixes:

   - AccountsChart: fix reordering of children of a renumbered account (todo #1104). 
   - FormulaEngine: fix nested parenthese evaluation (todo #1107).

 Other changes:

   - 
-----------------------------------------------------------------------
 Version 0.56
 ============

 Released on 2016-05-01
  
 New features and improvements:

   - Main notebook's pages are now detachable (todo #668), and re-attachable.
   - ofaDossierOpen: open in read-only mode (todo #701).
   - ofaFormulaEngine: accepts a variable count of arguments.
   - ofaTVARecordProperties: set the auto-eval mode to True.
   - ofsOpe: set again the auto-eval mode to False, only using %EVAL() function.
   - ofoTVARecord: improve data control.
   - ofoTVARecord: distinguish between correspondence and notes.
   - ofoTVARecord: generate entries at validation time. 
   - ofoEntry: new versioned import-export format, including operation number.
 
 Bug fixes:

   - Fix 'Closing period' menu item sensitivity when dossier is read-only.
   - ofaExerciceCloseAssistant: only run user prefs after closing assistant
     (and new properties have been set).
   - Fix crash of account and operation template selection after initial
     caller has been closed.

 Other changes:

   - myDndPopup: new class which manages both the icon and the dnd destination.
   - myDndWindow: new class which manages the child windows.
   - myBookDnd: class is renamed to myDndBook.
   - ofa_hub_dossier_is_writable(): new method.
   - ofa_hub_dossier_open: takes a new 'run_checks' boolean argument.
   - ofa_igetter_get_permanent_getter(): new method.
   - ofaIPrintable: moved to api.