@@ -335,12 +335,6 @@
 1102 2016- 5- 1 my_utils_widget_style_xx: is not consistent with a CSS
                 file in the application directory layout
 
-1106 2016- 5- 5 BUG when quitting the appli after accounts/opetemplates
-                modifications - account-select::379
-                cf. TODO 1106/trace
-
-1107 2016- 5- 5 BUG FormulaEngine: =%EVAL((%D1-%C2)/(1+%TVAN)) is wrong
-
 1110
 
 -----------------------------------------------------------------------
@@ -1274,6 +1268,13 @@
 1105 2016- 5- 3 FEAT OpeTemplate: if account is set, then tooltip is
                 account label
      2016- 5- 3 done
+
+1106 2016- 5- 5 BUG when quitting the appli after accounts/opetemplates
+                modifications - cf. TODO 1106/trace
+     2016- 5- 5 fixed
+
+1107 2016- 5- 5 BUG FormulaEngine: =%EVAL((%D1-%C2)/(1+%TVAN)) is wrong
+     2016- 5- 5 fixed
 
 1108 2016- 5- 5 OpeTemplateProperties, GuidedInputBin: review width of
                 account column
